[gd_scene load_steps=23 format=3 uid="uid://b0v8e7ytofvta"]

[ext_resource type="Texture2D" uid="uid://cafqrboarlj01" path="res://UI/Sprites/Ui interface battle.png" id="1_w41g3"]
[ext_resource type="Theme" uid="uid://dgb1fpy0jmrhl" path="res://UI/All theme/Label/Label_Ui.tres" id="2_u5k2f"]
[ext_resource type="Script" path="res://UI/Scene/UI battle/Scripts/Add ability child.gd" id="4_was1u"]
[ext_resource type="Theme" uid="uid://dce2r1lgfg10" path="res://UI/All theme/Separators/Separtor under UI.tres" id="5_7itc1"]
[ext_resource type="FontFile" uid="uid://c8wtl8lth42ho" path="res://UI/Custom font/DreiFraktur.ttf" id="5_dpa85"]
[ext_resource type="Script" path="res://UI/Scene/UI battle/Scripts/Queue.gd" id="8_ioi7v"]

[sub_resource type="Theme" id="Theme_3ocqj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f2fq0"]
atlas = ExtResource("1_w41g3")
region = Rect2(0, 448, 512, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fycd7"]
texture = SubResource("AtlasTexture_f2fq0")
texture_margin_top = 10.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_6xlj1"]
atlas = ExtResource("1_w41g3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="Theme" id="Theme_w303x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h1yic"]
atlas = ExtResource("1_w41g3")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_co5u8"]
atlas = ExtResource("1_w41g3")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s20qm"]
atlas = ExtResource("1_w41g3")
region = Rect2(64, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c14ia"]
atlas = ExtResource("1_w41g3")
region = Rect2(192, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4b3r"]
atlas = ExtResource("1_w41g3")
region = Rect2(256, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_stvvg"]
atlas = ExtResource("1_w41g3")
region = Rect2(192, 128, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmviq"]
atlas = ExtResource("1_w41g3")
region = Rect2(384, 192, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mlmwc"]
texture = SubResource("AtlasTexture_pmviq")
texture_margin_left = 18.0
texture_margin_top = 18.0
texture_margin_right = 18.0
texture_margin_bottom = 18.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Theme" id="Theme_r2qv7"]
RichTextLabel/fonts/normal_font = ExtResource("5_dpa85")
RichTextLabel/styles/normal = SubResource("StyleBoxTexture_mlmwc")

[sub_resource type="AtlasTexture" id="AtlasTexture_odiaa"]
atlas = ExtResource("1_w41g3")
region = Rect2(320, 0, 192, 64)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jqop1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Under UI" type="PanelContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -154.0
grow_horizontal = 2
theme = SubResource("Theme_3ocqj")
theme_override_styles/panel = SubResource("StyleBoxTexture_fycd7")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="Under UI"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="HBoxContainer" parent="Under UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
script = ExtResource("4_was1u")

[node name="Portret" type="TextureRect" parent="Under UI/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_6xlj1")
expand_mode = 2
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="Under UI/MarginContainer/VBoxContainer/Portret"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_w303x")
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Icon" type="TextureRect" parent="Under UI/MarginContainer/VBoxContainer/Portret/MarginContainer"]
layout_mode = 2

[node name="Left_stats_cont" type="GridContainer" parent="Under UI/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HP" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Left_stats_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "Health "

[node name="HP_value" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Left_stats_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "98/124"

[node name="Will" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Left_stats_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "Will"

[node name="Will_value" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Left_stats_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "34/100"

[node name="Speed" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Left_stats_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "Speed"

[node name="Speed_value" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Left_stats_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "6"

[node name="Reaction" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Left_stats_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "Reaction"

[node name="Reaction speed" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Left_stats_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "12"

[node name="VSeparator" type="VSeparator" parent="Under UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_7itc1")

[node name="Right_stat_cont" type="GridContainer" parent="Under UI/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Damage amp" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Right_stat_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "Damage amp."

[node name="Damage amp value" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Right_stat_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")

[node name="Mag_resist" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Right_stat_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "Magic Resist"

[node name="Mag_resist value" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Right_stat_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")

[node name="Phys_resist" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Right_stat_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "Physical resist"

[node name="Phys_resist value" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Right_stat_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")

[node name="Will_resist" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Right_stat_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "Will resist"

[node name="Will_resist value" type="Label" parent="Under UI/MarginContainer/VBoxContainer/Right_stat_cont"]
layout_mode = 2
theme = ExtResource("2_u5k2f")
text = "    "

[node name="Will" type="TextureProgressBar" parent="Under UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
value = 100.0
fill_mode = 3
stretch_margin_left = 32
stretch_margin_top = 32
stretch_margin_bottom = 32
texture_under = SubResource("AtlasTexture_h1yic")
texture_over = SubResource("AtlasTexture_co5u8")
texture_progress = SubResource("AtlasTexture_s20qm")

[node name="Hp" type="TextureProgressBar" parent="Under UI/MarginContainer/VBoxContainer"]
layout_mode = 2
value = 64.0
fill_mode = 3
texture_under = SubResource("AtlasTexture_c14ia")
texture_over = SubResource("AtlasTexture_i4b3r")
texture_progress = SubResource("AtlasTexture_stvvg")
tint_progress = Color(1, 0, 1, 1)

[node name="VSeparator2" type="VSeparator" parent="Under UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_7itc1")

[node name="Skills cont" type="HBoxContainer" parent="Under UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="description" type="RichTextLabel" parent="Under UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_r2qv7")
text = "Name ; King
Class : No classified"

[node name="Queue" type="NinePatchRect" parent="."]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
anchor_left = 0.462
anchor_top = 0.106
anchor_right = 0.537
anchor_bottom = 0.106
offset_left = 0.640015
offset_top = 0.160004
offset_right = 0.640015
offset_bottom = 64.16
grow_horizontal = 2
pivot_offset = Vector2(47.625, 0)
texture = SubResource("AtlasTexture_odiaa")
patch_margin_left = 48
patch_margin_right = 48
axis_stretch_horizontal = 1
script = ExtResource("8_ioi7v")

[node name="Stash queue" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.111
anchor_right = 0.5
anchor_bottom = 0.134
offset_left = -2.0
offset_top = -0.0400085
offset_right = 2.0
offset_bottom = 2.24
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jqop1")

[node name="HBoxContainer" type="HBoxContainer" parent="Stash queue"]
clip_contents = true
layout_mode = 2
alignment = 1

[connection signal="resized" from="Stash queue/HBoxContainer" to="Queue" method="_on_h_box_container_resized"]
